--- a/app/src/main/res/layout/activity_layout__relative.xml
+++ b/app/src/main/res/layout/activity_layout__relative.xml
@@ -4,12 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="10dp"
     tools:context="com.example.kalkausar.latihan.Layout_Relative">
-
+    
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/scroll1">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
     <android.support.v7.widget.CardView
         android:layout_width="350dp"
         android:layout_height="200dp"
-
         android:layout_centerHorizontal="true"
         android:layout_marginTop="5dp"
         app:cardBackgroundColor="#fff"
@@ -55,6 +63,152 @@
             android:background="#91000000" />
     </android.support.v7.widget.CardView>
 
+            <android.support.v7.widget.CardView
+                android:layout_width="350dp"
+                android:layout_height="200dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="5dp"
+                app:cardBackgroundColor="#fff"
+                app:cardCornerRadius="4dp"
+                app:cardElevation="3dp"
+                android:id="@+id/cardView5">>
+
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="350dp"
+                    android:layout_height="140dp"
+                    android:adjustViewBounds="false"
+                    android:cropToPadding="false"
+                    app:srcCompat="@drawable/kapal" />
+
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="160dp"
+                    android:layout_marginLeft="20dp"
+                    android:textStyle="bold"
+                    android:text="SHARE" />
+
+                <TextView
+                    android:id="@+id/textView5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="160dp"
+                    android:layout_marginLeft="85dp"
+                    android:textStyle="bold"
+                    android:textColor="#00CED1"
+                    android:text="Learn More" />
+
+                <TextView
+                    android:id="@+id/textView6"
+                    android:layout_width="350dp"
+                    android:layout_height="30dp"
+                    android:layout_marginTop="110dp"
+                    android:text="Lorem Ipsum"
+                    android:textColor="#fff"
+                    android:textStyle="bold"
+                    android:background="#91000000" />
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="350dp"
+                android:layout_height="200dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="5dp"
+                app:cardBackgroundColor="#fff"
+                app:cardCornerRadius="4dp"
+                app:cardElevation="3dp"
+                android:id="@+id/cardView6">>
+
+                <ImageView
+                    android:id="@+id/imageView3"
+                    android:layout_width="350dp"
+                    android:layout_height="140dp"
+                    android:adjustViewBounds="false"
+                    android:cropToPadding="false"
+                    app:srcCompat="@drawable/museum" />
+
+                <TextView
+                    android:id="@+id/textView7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="160dp"
+                    android:layout_marginLeft="20dp"
+                    android:textStyle="bold"
+                    android:text="SHARE" />
+
+                <TextView
+                    android:id="@+id/textView8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="160dp"
+                    android:layout_marginLeft="85dp"
+                    android:textStyle="bold"
+                    android:textColor="#00CED1"
+                    android:text="Learn More" />
+
+                <TextView
+                    android:id="@+id/textView9"
+                    android:layout_width="350dp"
+                    android:layout_height="30dp"
+                    android:layout_marginTop="110dp"
+                    android:text="Lorem Ipsum"
+                    android:textColor="#fff"
+                    android:textStyle="bold"
+                    android:background="#91000000" />
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="350dp"
+                android:layout_height="200dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="5dp"
+                app:cardBackgroundColor="#fff"
+                app:cardCornerRadius="4dp"
+                app:cardElevation="3dp"
+                android:id="@+id/cardView7">>
+
+                <ImageView
+                    android:id="@+id/imageView4"
+                    android:layout_width="350dp"
+                    android:layout_height="140dp"
+                    android:adjustViewBounds="false"
+                    android:cropToPadding="false"
+                    app:srcCompat="@drawable/sabang" />
+
+                <TextView
+                    android:id="@+id/textView10"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="160dp"
+                    android:layout_marginLeft="20dp"
+                    android:textStyle="bold"
+                    android:text="SHARE" />
+
+                <TextView
+                    android:id="@+id/textView11"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="160dp"
+                    android:layout_marginLeft="85dp"
+                    android:textStyle="bold"
+                    android:textColor="#00CED1"
+                    android:text="Learn More" />
+
+                <TextView
+                    android:id="@+id/textView12"
+                    android:layout_width="350dp"
+                    android:layout_height="30dp"
+                    android:layout_marginTop="110dp"
+                    android:text="Lorem Ipsum"
+                    android:textColor="#fff"
+                    android:textStyle="bold"
+                    android:background="#91000000" />
+            </android.support.v7.widget.CardView>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <Button
         android:id="@+id/btn_back"
         android:layout_width="wrap_content"
@@ -62,16 +216,15 @@
         android:layout_alignLeft="@+id/cardView4"
         android:layout_alignParentBottom="true"
         android:layout_alignStart="@+id/cardView4"
-        android:layout_marginBottom="36dp"
+        android:layout_marginTop="10dp"
         android:layout_marginLeft="72dp"
         android:layout_marginStart="72dp"
-        android:text="Back" />
+        android:text="Linear" />
 
     <Button
         android:id="@+id/btn_cls"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:layout_alignBaseline="@+id/btn_back"
         android:layout_alignBottom="@+id/btn_back"
         android:layout_marginLeft="54dp"
@@ -79,5 +232,7 @@
         android:layout_toEndOf="@+id/btn_back"
         android:layout_toRightOf="@+id/btn_back"
         android:text="Close" />
-
+    </RelativeLayout>
+        </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
