--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,86 +4,218 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
+    android:orientation="vertical"
+    android:padding="15dp"
     tools:context="com.example.kalkausar.latihan.MainActivity">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <LinearLayout
-        android:layout_width="190dp"
-        android:layout_height="400dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
         <android.support.v7.widget.CardView
-            android:layout_width="300px"
-            android:layout_height="400px"
-            android:layout_marginTop="20px"
-            android:layout_marginLeft="40px">
+            android:layout_width="350dp"
+            android:layout_height="200dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp"
+            app:cardBackgroundColor="#fff"
+            app:cardCornerRadius="4dp"
+            app:cardElevation="3dp"
+            android:id="@+id/cardView4">>
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="350dp"
+                android:layout_height="140dp"
+                android:adjustViewBounds="false"
+                android:cropToPadding="false"
+                app:srcCompat="@drawable/masjid" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="160dp"
+                android:layout_marginLeft="20dp"
+                android:textStyle="bold"
+                android:text="SHARE" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="160dp"
+                android:layout_marginLeft="85dp"
+                android:textStyle="bold"
+                android:textColor="#00CED1"
+                android:text="Learn More" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="350dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="110dp"
+                android:text="Lorem Ipsum"
+                android:textColor="#fff"
+                android:textStyle="bold"
+                android:background="#91000000" />
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="350dp"
+            android:layout_height="200dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp"
+            app:cardBackgroundColor="#fff"
+            app:cardCornerRadius="4dp"
+            app:cardElevation="3dp"
+            android:id="@+id/cardView5">>
 
             <ImageView
                 android:id="@+id/imageView2"
-                android:layout_width="match_parent"
-                android:layout_height="151dp"
-                android:src="@drawable/album" />
+                android:layout_width="350dp"
+                android:layout_height="140dp"
+                android:adjustViewBounds="false"
+                android:cropToPadding="false"
+                app:srcCompat="@drawable/kapal" />
 
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="150dp"
-                android:layout_marginLeft="5dp"
+                android:layout_marginTop="160dp"
+                android:layout_marginLeft="20dp"
                 android:textStyle="bold"
-                android:textSize="30px"
-                android:text="True Romance" />
+                android:text="SHARE" />
 
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="170dp"
-                android:layout_marginLeft="5dp"
-                android:text="8 Song" />
-        </android.support.v7.widget.CardView>
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="190dp"
-        android:layout_height="400dp">
-        <android.support.v7.widget.CardView
-            android:layout_width="300px"
-            android:layout_height="400px"
-            android:layout_marginTop="20px"
-            android:layout_marginLeft="25px">
-
-            <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:src="@drawable/album2" />
+                android:layout_marginTop="160dp"
+                android:layout_marginLeft="85dp"
+                android:textStyle="bold"
+                android:textColor="#00CED1"
+                android:text="Learn More" />
 
             <TextView
                 android:id="@+id/textView6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="150dp"
-                android:layout_marginLeft="5dp"
+                android:layout_width="350dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="110dp"
+                android:text="Lorem Ipsum"
+                android:textColor="#fff"
                 android:textStyle="bold"
-                android:textSize="30px"
-                android:text="True Romance" />
+                android:background="#91000000" />
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="350dp"
+            android:layout_height="200dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp"
+            app:cardBackgroundColor="#fff"
+            app:cardCornerRadius="4dp"
+            app:cardElevation="3dp"
+            android:id="@+id/cardView6">>
+
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="350dp"
+                android:layout_height="140dp"
+                android:adjustViewBounds="false"
+                android:cropToPadding="false"
+                app:srcCompat="@drawable/museum" />
 
             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="170dp"
-                android:layout_marginLeft="5dp"
-                android:text="8 Song" />
+                android:layout_marginTop="160dp"
+                android:layout_marginLeft="20dp"
+                android:textStyle="bold"
+                android:text="SHARE" />
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="160dp"
+                android:layout_marginLeft="85dp"
+                android:textStyle="bold"
+                android:textColor="#00CED1"
+                android:text="Learn More" />
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="350dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="110dp"
+                android:text="Lorem Ipsum"
+                android:textColor="#fff"
+                android:textStyle="bold"
+                android:background="#91000000" />
         </android.support.v7.widget.CardView>
-    </LinearLayout>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="350dp"
+            android:layout_height="200dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp"
+            app:cardBackgroundColor="#fff"
+            app:cardCornerRadius="4dp"
+            app:cardElevation="3dp"
+            android:id="@+id/cardView7">>
+
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="350dp"
+                android:layout_height="140dp"
+                android:adjustViewBounds="false"
+                android:cropToPadding="false"
+                app:srcCompat="@drawable/sabang" />
+
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="160dp"
+                android:layout_marginLeft="20dp"
+                android:textStyle="bold"
+                android:text="SHARE" />
+
+            <TextView
+                android:id="@+id/textView11"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="160dp"
+                android:layout_marginLeft="85dp"
+                android:textStyle="bold"
+                android:textColor="#00CED1"
+                android:text="Learn More" />
+
+            <TextView
+                android:id="@+id/textView12"
+                android:layout_width="350dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="110dp"
+                android:text="Lorem Ipsum"
+                android:textColor="#fff"
+                android:textStyle="bold"
+                android:background="#91000000" />
+        </android.support.v7.widget.CardView>
     <Button
         android:id="@+id/btn_pndh"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="450dp"
-        android:layout_marginLeft="-270dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="110dp"
         android:background="@color/colorPrimaryDark"
-        android:text="Pindah Halaman"
+        android:text="Relative"
         android:textColor="#fff" />
+    </LinearLayout>
+    </ScrollView>
 </LinearLayout>
 
