--- a/app/src/main/res/layout/activity_layout__relative.xml
+++ b/app/src/main/res/layout/activity_layout__relative.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
+    android:padding="5dp"
     tools:context="com.example.kalkausar.latihan.Layout_Relative">
     
     <ScrollView
@@ -15,68 +15,71 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-    <android.support.v7.widget.CardView
-        android:layout_width="350dp"
-        android:layout_height="200dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="5dp"
-        app:cardBackgroundColor="#fff"
-        app:cardCornerRadius="4dp"
-        app:cardElevation="3dp"
-        android:id="@+id/cardView4">>
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="350dp"
-            android:layout_height="140dp"
-            android:adjustViewBounds="false"
-            android:cropToPadding="false"
-            app:srcCompat="@drawable/masjid" />
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="160dp"
-            android:layout_marginLeft="20dp"
-            android:textStyle="bold"
-            android:text="SHARE" />
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="160dp"
-            android:layout_marginLeft="85dp"
-            android:textStyle="bold"
-            android:textColor="#00CED1"
-            android:text="Learn More" />
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="350dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="110dp"
-            android:text="Lorem Ipsum"
-            android:textColor="#fff"
-            android:textStyle="bold"
-            android:background="#91000000" />
-    </android.support.v7.widget.CardView>
-
             <android.support.v7.widget.CardView
-                android:layout_width="350dp"
+                android:layout_width="329dp"
                 android:layout_height="200dp"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="5dp"
-                app:cardBackgroundColor="#fff"
+                android:layout_marginTop="10dp"
+                android:layout_gravity="center"
+                app:cardBackgroundColor="#E8E8E8"
+                app:cardCornerRadius="4dp"
+                app:cardElevation="3dp"
+                android:id="@+id/cardView4">>
+
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="329dp"
+                    android:layout_height="131dp"
+                    android:adjustViewBounds="false"
+                    android:cropToPadding="false"
+                    app:srcCompat="@drawable/masjid" />
+
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="160dp"
+                    android:layout_marginLeft="20dp"
+                    android:textStyle="bold"
+                    android:text="SHARE" />
+
+                <TextView
+                    android:id="@+id/learnmore1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="160dp"
+                    android:layout_marginLeft="85dp"
+                    android:textStyle="bold"
+                    android:textColor="#00CED1"
+                    android:text="Learn More" />
+
+                <TextView
+                    android:id="@+id/txt_judul1"
+                    android:layout_width="329dp"
+                    android:layout_height="30dp"
+                    android:layout_marginTop="102dp"
+                    android:padding="6dp"
+                    android:text="Lorem Ipsum"
+                    android:textColor="#fff"
+                    android:textStyle="bold"
+                    android:background="#91000000" />
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="329dp"
+                android:layout_height="200dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:layout_gravity="center"
+                app:cardBackgroundColor="#E8E8E8"
                 app:cardCornerRadius="4dp"
                 app:cardElevation="3dp"
                 android:id="@+id/cardView5">>
 
                 <ImageView
                     android:id="@+id/imageView2"
-                    android:layout_width="350dp"
-                    android:layout_height="140dp"
+                    android:layout_width="329dp"
+                    android:layout_height="131dp"
                     android:adjustViewBounds="false"
                     android:cropToPadding="false"
                     app:srcCompat="@drawable/kapal" />
@@ -102,9 +105,10 @@
 
                 <TextView
                     android:id="@+id/textView6"
-                    android:layout_width="350dp"
+                    android:layout_width="329dp"
                     android:layout_height="30dp"
-                    android:layout_marginTop="110dp"
+                    android:layout_marginTop="102dp"
+                    android:padding="6dp"
                     android:text="Lorem Ipsum"
                     android:textColor="#fff"
                     android:textStyle="bold"
@@ -112,19 +116,20 @@
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
-                android:layout_width="350dp"
+                android:layout_width="329dp"
                 android:layout_height="200dp"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="5dp"
-                app:cardBackgroundColor="#fff"
+                android:layout_marginTop="10dp"
+                android:layout_gravity="center"
+                app:cardBackgroundColor="#E8E8E8"
                 app:cardCornerRadius="4dp"
                 app:cardElevation="3dp"
                 android:id="@+id/cardView6">>
 
                 <ImageView
                     android:id="@+id/imageView3"
-                    android:layout_width="350dp"
-                    android:layout_height="140dp"
+                    android:layout_width="329dp"
+                    android:layout_height="131dp"
                     android:adjustViewBounds="false"
                     android:cropToPadding="false"
                     app:srcCompat="@drawable/museum" />
@@ -150,9 +155,10 @@
 
                 <TextView
                     android:id="@+id/textView9"
-                    android:layout_width="350dp"
+                    android:layout_width="345dp"
                     android:layout_height="30dp"
-                    android:layout_marginTop="110dp"
+                    android:layout_marginTop="102dp"
+                    android:padding="6dp"
                     android:text="Lorem Ipsum"
                     android:textColor="#fff"
                     android:textStyle="bold"
@@ -160,19 +166,20 @@
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
-                android:layout_width="350dp"
+                android:layout_width="329dp"
                 android:layout_height="200dp"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="5dp"
-                app:cardBackgroundColor="#fff"
+                android:layout_marginTop="10dp"
+                android:layout_gravity="center"
+                app:cardBackgroundColor="#E8E8E8"
                 app:cardCornerRadius="4dp"
                 app:cardElevation="3dp"
                 android:id="@+id/cardView7">>
 
                 <ImageView
                     android:id="@+id/imageView4"
-                    android:layout_width="350dp"
-                    android:layout_height="140dp"
+                    android:layout_width="329dp"
+                    android:layout_height="131dp"
                     android:adjustViewBounds="false"
                     android:cropToPadding="false"
                     app:srcCompat="@drawable/sabang" />
@@ -198,9 +205,10 @@
 
                 <TextView
                     android:id="@+id/textView12"
-                    android:layout_width="350dp"
+                    android:layout_width="329dp"
                     android:layout_height="30dp"
-                    android:layout_marginTop="110dp"
+                    android:layout_marginTop="102dp"
+                    android:padding="6dp"
                     android:text="Lorem Ipsum"
                     android:textColor="#fff"
                     android:textStyle="bold"
