--- a/app/src/main/res/layout/row_item_grid_menu.xml
+++ b/app/src/main/res/layout/row_item_grid_menu.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -12,7 +10,7 @@
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
         app:cardCornerRadius="8dp"
-        app:cardElevation="8dp">
+        app:cardElevation="5dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -35,7 +33,8 @@
                 android:layout_centerHorizontal="true"
                 android:textColor="@color/black"
                 android:textSize="12dp"
-                android:textStyle="italic"/>
+                android:textStyle="italic"
+                android:padding="2dp"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
