--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,4 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@+id/navigation_home"
+        android:icon="@drawable/ic_my_house"
+        android:title="Home" />
+    <item
+        android:id="@+id/navigation_inbox"
+        android:icon="@drawable/ic_my_inbox"
+        android:title="My Inbox" />
+    <item
+        android:id="@+id/navigation_booking"
+        android:icon="@drawable/ic_my_booking"
+        android:title="My Booking" />
+    <item
+        android:id="@+id/navigation_event"
+        android:icon="@drawable/ic_event"
+        android:title="Event" />
 </menu>
