--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="darkOrange">#FF8C00</color>
+    <color name="gray">#606060</color>
+    <color name="dark2orange">#FF4500</color>
+    <color name="black">#000000</color>
 </resources>
