--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -40,6 +40,16 @@
             android:textColor="#fff"
             android:textSize="20dp" />
 
+        <Button
+            android:id="@+id/buttonLogout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:background="@color/colorPrimary"
+            android:text="Logout"
+            android:textColor="@android:color/white"
+            android:onClick="btnClick"/>
+
     </LinearLayout>
 
 
