--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -53,7 +53,7 @@
                 android:layout_height="match_parent"
                 android:layout_below="@id/layout_top"
                 android:orientation="vertical"
-                android:padding="5dp">
+                android:padding="10dp">
 
                 <TextView
                     android:id="@+id/textGrid"
@@ -62,8 +62,7 @@
                     android:padding="6dp"
                     android:text="Hey Mau Kemana Kamu?"
                     android:textColor="@color/black"
-                    android:textSize="17dp"
-                    android:textStyle="bold" />
+                    android:textSize="17dp" />
 
 
                 <LinearLayout
@@ -77,7 +76,7 @@
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/Reclyer_Layout_Menu"
-                        android:layout_width="fill_parent"
+                        android:layout_width="match_parent"
                         android:layout_height="250dp"
                         android:columnWidth="100dp"
                         android:columnOrderPreserved="false"
@@ -86,7 +85,7 @@
                         android:horizontalSpacing="5dp"
                         android:nestedScrollingEnabled="false"
                         android:numColumns="auto_fit"
-                        android:padding="14dp"
+                        android:padding="5dp"
                         android:smoothScrollbar="true"
                         android:stretchMode="columnWidth"
                         android:verticalSpacing="5dp" />
@@ -94,11 +93,10 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="5dp"
+                        android:padding="6dp"
                         android:text="Event in Aceh 2019"
                         android:textColor="@color/black"
-                        android:textSize="17dp"
-                        android:textStyle="bold" />
+                        android:textSize="17dp" />
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/event_recyclerview"
