--- a/app/src/main/res/layout/row_item_grid_menu.xml
+++ b/app/src/main/res/layout/row_item_grid_menu.xml
@@ -6,18 +6,18 @@
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:layout_marginBottom="10dp"
         app:cardCornerRadius="8dp"
-        app:cardElevation="5dp">
+        app:cardElevation="3dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="5dp">
+            android:layout_margin="10dp">
 
             <ImageView
                 android:id="@+id/imageView"
