--- a/app/src/main/res/layout/activity_flight.xml
+++ b/app/src/main/res/layout/activity_flight.xml
@@ -3,42 +3,182 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    android:layout_height="match_parent"
     android:layout_gravity="center"
+    android:background="@color/darkOrange"
+    android:orientation="horizontal"
     tools:context=".FlightActivity">
 
-    <LinearLayout
-        android:id="@+id/relative_layout_contruction"
+    <RelativeLayout
+        android:id="@+id/relative_layout_content_flight"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:padding="20dp"
+        android:background="@drawable/ic_backgroundwhite"
+        android:backgroundTint="@color/white">
 
-        <ImageView
-            android:id="@+id/imageView_detail"
+        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/card_view_flight_data"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_centerInParent="true"
-            android:foregroundGravity="center_vertical"
-            android:src="@drawable/recontruction" />
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="@color/white"
+            android:elevation="15dp"
+            app:cardCornerRadius="10dp">
 
-        <TextView
-            android:id="@+id/textview_title"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/imageView_detail"
-            android:text="@string/pesawat_belum_tersedia"
-            android:textSize="20dp"
-            android:textStyle="bold" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="15dp">
 
-        <TextView
-            android:id="@+id/textview_desc"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/imageView_detail"
-            android:text="@string/contruction"
-            android:textSize="20dp" />
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/text_view_name_passengger"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="2dp"
+                    android:text="Nama Penumpang"
+                    android:textColor="#666"
+                    android:textSize="12dp" />
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/edit_Text_Name_Passengger"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/text_view_name_passengger"
+                    android:layout_gravity="center"
+                    android:drawableLeft="@drawable/ic_my_user"
+                    android:drawableTint="@color/darkOrange"
+                    android:drawablePadding="10dp"
+                    android:hint="Passengger Name"
+                    android:inputType="text" />
+
+                <TextView
+                    android:id="@+id/text_view_departure"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="2dp"
+                    android:text="Dari"
+                    android:textColor="#666"
+                    android:textSize="12dp"
+                    android:layout_below="@id/edit_Text_Name_Passengger"
+                    />
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/edit_Text_Departure"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/text_view_departure"
+                    android:layout_gravity="center"
+                    android:drawableLeft="@drawable/ic_departures"
+                    android:drawableTint="@color/darkOrange"
+                    android:drawablePadding="10dp"
+                    android:hint="Keberangkatan"
+                    android:inputType="text" />
+
+                <TextView
+                    android:id="@+id/text_view_arrival"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/edit_Text_Departure"
+                    android:layout_marginLeft="2dp"
+                    android:text="Ke"
+                    android:textColor="#666"
+                    android:textSize="12dp" />
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/edit_Text_Arrival"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/text_view_arrival"
+                    android:layout_gravity="center"
+                    android:drawableLeft="@drawable/ic_arrival"
+                    android:drawablePadding="10dp"
+                    android:drawableTint="@color/darkOrange"
+                    android:hint="Tujuan"
+                    android:inputType="text" />
+
+                <TextView
+                    android:id="@+id/text_view_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/edit_Text_Arrival"
+                    android:layout_marginLeft="2dp"
+                    android:text="Tanggal"
+                    android:textColor="#666"
+                    android:textSize="12dp" />
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/edit_Text_Date"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/text_view_date"
+                    android:layout_gravity="center"
+                    android:drawableLeft="@drawable/ic_calendar"
+                    android:drawablePadding="10dp"
+                    android:drawableTint="@color/darkOrange"
+                    android:hint="Tanggal"
+                    android:inputType="none"
+                    android:editable="false"
+                    android:focusable="false"/>
+
+
+                <TextView
+                    android:id="@+id/text_view_JmlPenumpang"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/edit_Text_Date"
+                    android:layout_marginLeft="2dp"
+                    android:text="Penumpang"
+                    android:textColor="#666"
+                    android:textSize="12dp" />
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/edit_Text_Penumpang"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/text_view_JmlPenumpang"
+                    android:layout_gravity="center"
+                    android:drawableLeft="@drawable/ic_my_user"
+                    android:drawablePadding="10dp"
+                    android:drawableTint="@color/darkOrange"
+                    android:hint="Jumlah Penumpang"
+                    android:inputType="text" />
+
+                <TextView
+                    android:id="@+id/text_view_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/edit_Text_Penumpang"
+                    android:layout_marginLeft="2dp"
+                    android:text="Harga"
+                    android:textColor="#666"
+                    android:textSize="12dp" />
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/edit_Text_Price"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/text_view_price"
+                    android:layout_gravity="center"
+                    android:drawableLeft="@drawable/ic_label"
+                    android:drawablePadding="10dp"
+                    android:drawableTint="@color/darkOrange"
+                    android:hint="Harga"
+                    android:inputType="text" />
+
+                <Button
+                    android:id="@+id/button_save_flight"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/edit_Text_Price"
+                    android:layout_marginTop="16dp"
+                    android:background="@drawable/shaping_buttons"
+                    android:text="Save"
+                    android:textColor="@android:color/white"
+                    android:textSize="20dp" />
+
+            </RelativeLayout>
+        </android.support.v7.widget.CardView>
+    </RelativeLayout>
 
 </RelativeLayout>
