--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="gray">#606060</color>
     <color name="dark2orange">#FF4500</color>
     <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
 </resources>
