--- a/app/src/main/res/layout/activity_flight.xml
+++ b/app/src/main/res/layout/activity_flight.xml
@@ -13,9 +13,9 @@
         android:id="@+id/relative_layout_content_flight"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="20dp"
         android:background="@drawable/ic_backgroundwhite"
-        android:backgroundTint="@color/white">
+        android:backgroundTint="@color/white"
+        android:padding="20dp">
 
         <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/card_view_flight_data"
@@ -47,8 +47,8 @@
                     android:layout_below="@id/text_view_name_passengger"
                     android:layout_gravity="center"
                     android:drawableLeft="@drawable/ic_my_user"
-                    android:drawableTint="@color/darkOrange"
                     android:drawablePadding="10dp"
+                    android:drawableTint="@color/darkOrange"
                     android:hint="Passengger Name"
                     android:inputType="text" />
 
@@ -56,12 +56,11 @@
                     android:id="@+id/text_view_departure"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_below="@id/edit_Text_Name_Passengger"
                     android:layout_marginLeft="2dp"
                     android:text="Dari"
                     android:textColor="#666"
-                    android:textSize="12dp"
-                    android:layout_below="@id/edit_Text_Name_Passengger"
-                    />
+                    android:textSize="12dp" />
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/edit_Text_Departure"
@@ -70,8 +69,8 @@
                     android:layout_below="@id/text_view_departure"
                     android:layout_gravity="center"
                     android:drawableLeft="@drawable/ic_departures"
-                    android:drawableTint="@color/darkOrange"
                     android:drawablePadding="10dp"
+                    android:drawableTint="@color/darkOrange"
                     android:hint="Keberangkatan"
                     android:inputType="text" />
 
@@ -116,10 +115,10 @@
                     android:drawableLeft="@drawable/ic_calendar"
                     android:drawablePadding="10dp"
                     android:drawableTint="@color/darkOrange"
-                    android:hint="Tanggal"
-                    android:inputType="none"
                     android:editable="false"
-                    android:focusable="false"/>
+                    android:focusable="false"
+                    android:hint="Tanggal"
+                    android:inputType="none" />
 
 
                 <TextView
@@ -142,7 +141,7 @@
                     android:drawablePadding="10dp"
                     android:drawableTint="@color/darkOrange"
                     android:hint="Jumlah Penumpang"
-                    android:inputType="text" />
+                    android:inputType="number" />
 
                 <TextView
                     android:id="@+id/text_view_price"
@@ -164,7 +163,14 @@
                     android:drawablePadding="10dp"
                     android:drawableTint="@color/darkOrange"
                     android:hint="Harga"
-                    android:inputType="text" />
+                    android:inputType="number" />
+
+                <ProgressBar
+                    android:id="@+id/progressBar_flight"
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/edit_Text_Price" />
 
                 <Button
                     android:id="@+id/button_save_flight"
